--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-public/*.json
-public/*.txt
-
 src/assets/*.json
 
 computations/__pycache__
@@ -33,3 +30,4 @@ computations/*.json
 computations/*.csv
 computations/*.txt
 computations/pipeline-results/*.txt
+computations/pipeline-results-extreme
